[tool.poetry]
name = "recap"
version = "0.1.0"
description = "Send CRS/Recap events to Sentry."
authors = ["Ashley Camba Garrido <ashley.camba-garrido@sentry.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9"}
sentry-sdk = "^1.27"
pydantic = "^2.0"
httpx = "^0.25.0"
filelock = "^3.12.4"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "1.4.1"
ruff = "0.0.276"
black = "23.3.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recap = "recap:app"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.mypy]
files = "recap"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.isort]
profile = "black"
src_paths = ["recap", "tests"]
